Adding a background color

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <title>Rauf's Personal Site</title>
   </head>
-  <body>
+  <body style="background-color:#F2EBE9">
       <table cellspacing="20">
         <tr>
           <td><img src="images/photo_crop.png" alt="rauf profle picture" width="200" height="200"></td>
